text, color, atc, qty

--- a/assets/section-product-information.css
+++ b/assets/section-product-information.css
@@ -3,22 +3,78 @@
   justify-content: center;
   gap: 80px;
   margin-top: 80px;
+  flex-wrap: wrap;
+}
+
+.product__swiper-main {
+  margin-bottom: 16px;
 }
 
 .product__gallery,
 .product__details {
+  width: 100%;
   max-width: 530px;
 }
 
 .product__image {
   width: 100%;
   height: auto;
+  vertical-align: bottom;
 }
+
+.product__swiper-button-next,
+.product__swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  z-index: 1;
+}
+
+.product__swiper-button-next:hover,
+.product__swiper-button-prev:hover {
+  cursor: pointer;
+}
+
+.product__swiper-button-next {
+  right: 0;
+}
+
+.product__swiper-button-prev {
+  left: 0;
+}
+
 
 .product__thumb {
   padding: 4px;
 }
 
+.product__thumb:hover {
+  cursor: pointer;
+}
+
 .swiper-slide-thumb-active {
-  border: 1px solid #61402E;
+  border: 1px solid rgba(var(--color-foreground));
+}
+
+.product .product__title {
+  margin-bottom: 8px;
+}
+
+.product__title h1 {
+  font-size: 32px;
+  line-height: 41.6px;
+}
+
+.product__description p {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(var(--color-foreground));
+}
+
+@media screen and (max-width: 750px) {
+  .product {
+    padding: 48px 20px;
+    margin: 0;
+    gap: 32px;
+  }
 }
