--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -20,7 +20,6 @@
 
 .price .price-item {
   display: inline-block;
-  margin: 0 1rem 0 0;
 }
 
 .price__regular .price-item--regular {
@@ -86,8 +85,8 @@
 
 .price--on-sale .price-item--regular {
   text-decoration: line-through;
-  color: rgba(var(--color-foreground), 0.75);
-  font-size: 1.3rem;
+  color: #B09F97;
+  font-size: 1.6rem;
 }
 
 .unit-price {
