--- a/assets/section-product-information.css
+++ b/assets/section-product-information.css
@@ -161,12 +161,14 @@
 }
 
 .product-details__title {
+  color: rgba(var(--color-foreground));
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
 }
 
 .product-details__description {
+  color: rgba(var(--color-foreground));
   font-size: 14px;
   line-height: 21px;
 }
