--- a/sections/product-information.liquid
+++ b/sections/product-information.liquid
@@ -130,6 +130,74 @@
                   {% endif %}
                 </div>
               </div>
+            {% when 'icons' %}
+              <div class="product-features">
+                <ul class="product-features__list">
+                  {% capture sizes %}
+                  (min-width: 1440px) 327px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)
+                  {% endcapture %}
+                  {% if block.settings.first_image != blank %}
+                    <li class="product-features__item">
+                      {{
+                        block.settings.first_image
+                        | image_url: width: 3200
+                        | image_tag:
+                          widths: '50, 75, 100, 150, 200, 300, 400, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3200',
+                          sizes: sizes,
+                          class: 'product-features__icon'
+                      }}
+                    </li>
+                  {% endif %}
+                  {% if block.settings.second_image != blank %}
+                    <li class="product-features__item">
+                      {{
+                        block.settings.second_image
+                        | image_url: width: 3200
+                        | image_tag:
+                          widths: '50, 75, 100, 150, 200, 300, 400, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3200',
+                          sizes: sizes,
+                          class: 'product-features__icon'
+                      }}
+                    </li>
+                  {% endif %}
+                  {% if block.settings.third_image != blank %}
+                    <li class="product-features__item">
+                      {{
+                        block.settings.third_image
+                        | image_url: width: 3200
+                        | image_tag:
+                          widths: '50, 75, 100, 150, 200, 300, 400, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3200',
+                          sizes: sizes,
+                          class: 'product-features__icon'
+                      }}
+                    </li>
+                  {% endif %}
+                  {% if block.settings.fourth_image != blank %}
+                    <li class="product-features__item">
+                      {{
+                        block.settings.fourth_image
+                        | image_url: width: 3200
+                        | image_tag:
+                          widths: '50, 75, 100, 150, 200, 300, 400, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3200',
+                          sizes: sizes,
+                          class: 'product-features__icon'
+                      }}
+                    </li>
+                  {% endif %}
+                  {% if block.settings.fifth_image != blank %}
+                    <li class="product-features__item">
+                      {{
+                        block.settings.fifth_image
+                        | image_url: width: 3200
+                        | image_tag:
+                          widths: '50, 75, 100, 150, 200, 300, 400, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3200',
+                          sizes: sizes,
+                          class: 'product-features__icon'
+                      }}
+                    </li>
+                  {% endif %}
+                </ul>
+              </div>
             {%- when 'text' -%}
               <p
                 class="product__text inline-richtext{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}"
@@ -478,6 +546,37 @@
           "id": "description",
           "default": "Text block",
           "label": "Description"
+        }
+      ]
+    },
+    {
+      "type": "icons",
+      "name": "Icons",
+      "settings": [
+        {
+          "type": "image_picker",
+          "label": "Image",
+          "id": "first_image"
+        },
+        {
+          "type": "image_picker",
+          "label": "Image",
+          "id": "second_image"
+        },
+        {
+          "type": "image_picker",
+          "label": "Image",
+          "id": "third_image"
+        },
+        {
+          "type": "image_picker",
+          "label": "Image",
+          "id": "fourth_image"
+        },
+        {
+          "type": "image_picker",
+          "label": "Image",
+          "id": "fifth_image"
         }
       ]
     },
