--- a/sections/product-information.liquid
+++ b/sections/product-information.liquid
@@ -33,13 +33,13 @@
       <div class="swiper product__swiper-main">
         <div class="swiper-wrapper">
           {%- capture sizes -%}
-          (min-width: {{ settings.page_width }}px) calc(({{ settings.page_width }}px - 100px) * 1 / 3 - 8),
-          (min-width: 750px) calc((100vw - 100px) * 1 / 3 - 8),
-          calc(100vw - 30px)
-       {%- endcapture -%}
+            (min-width: {{ settings.page_width }}px) calc(({{ settings.page_width }}px - 100px) * 1 / 3 - 8),
+            (min-width: 750px) calc((100vw - 100px) * 1 / 3 - 8),
+            calc(100vw - 30px)
+          {%- endcapture -%}
           {%- if product.selected_or_first_available_variant.featured_media != null -%}
             {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
-            <div class="swiper-slide product__slide" data-media-id="{{ section.id }}-{{ featured_media.id }}">
+            <div class="swiper-slide product__slide" data-media-id="{{ featured_media.id }}">
               {{
                 featured_media.preview_image
                 | image_url: width: 1946
@@ -52,7 +52,7 @@
           {%- endif -%}
           {%- for media in product.media -%}
             {%- unless media.id == product.selected_or_first_available_variant.featured_media.id -%}
-              <div class="swiper-slide product__slide" data-media-id="{{ section.id }}-{{ featured_media.id }}">
+              <div class="swiper-slide product__slide" data-media-id="{{ featured_media.id }}">
                 {{
                   media.preview_image
                   | image_url: width: 1946
@@ -81,10 +81,11 @@
 
       <div class="swiper product__swiper product__swiper--thumbs">
         <div class="swiper-wrapper product__swiper-wrapper">
-          {%- for media in product.media -%}
-            <div class="swiper-slide product__thumb">
+          {%- if product.selected_or_first_available_variant.featured_media != null -%}
+            {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
+            <div class="swiper-slide product__thumb" data-media-id="{{ featured_media.id }}">
               {{
-                media.preview_image
+                featured_media.preview_image
                 | image_url: width: 1946
                 | image_tag:
                   class: 'product__image product__thumb-image',
@@ -92,6 +93,20 @@
                   widths: '246, 493, 600, 713, 823, 990, 1100, 1206, 1346, 1426, 1646, 1946'
               }}
             </div>
+          {%- endif -%}
+          {%- for media in product.media -%}
+            {%- unless media.id == product.selected_or_first_available_variant.featured_media.id -%}
+              <div class="swiper-slide product__thumb" data-media-id="{{ media.id }}">
+                {{
+                  media.preview_image
+                  | image_url: width: 1946
+                  | image_tag:
+                    class: 'product__image product__thumb-image',
+                    sizes: sizes,
+                    widths: '246, 493, 600, 713, 823, 990, 1100, 1206, 1346, 1426, 1646, 1946'
+                }}
+              </div>
+            {%- endunless -%}
           {%- endfor -%}
         </div>
       </div>
